@@ -46,9 +46,9 @@ GALLERY_SIDECAR_POSTFIX       .xmp:.XMP
 imagemagick_command                          convert __OPTIONS__ -scale __GEOMETRY__ __INFILE__ __OUTFILE__
 
 GALLERY_IMAGE_CMD_JPG                        $imagemagick_command
+GALLERY_IMAGE_CMD_JPG_MIME_TYPE              image/jpeg
 GALLERY_IMAGE_CMD_JPG_OPTION_ORIENT          -auto-orient
 GALLERY_IMAGE_CMD_JPG_OPTION_QUALITY         -quality 75
-GALLERY_IMAGE_CMD_JPG_MIME_TYPE              image/jpeg
 
 ffmpeg_command                               ffmpeg -y -i __INFILE__ -loglevel warning -threads 8 -copyts __OPTIONS__ __OUTFILE__
 
