@@ -50,7 +50,6 @@ fixed_ratio       4:3
 # Variables used by templates
 #
 
-mobile_view           1
 meta_viewport         width=device-width, initial-scale=1, user-scalable=1
 
 head_title_prefix      "Gallery - "
@@ -76,6 +75,17 @@ gallery_trail          1
 # work. Download the sources at: <http://galleria.io/>
 gallery_slideshow      1
 
+# Link on image. Accepted values: "original" or "next"
+gallery_image_link     original
+
+# Display minithumbs on bottom prev/next buttons
+#gallery_prevnext_bottom   minithumb
+
+# Display prev/next buttons on top
+#gallery_prevnext_top  1
+
+# Display prev/next buttons without decoration
+#gallery_button_simple 1
 
 scripts_dir           $URI_PREFIX/scripts
 css_dir               $URI_PREFIX/css
