@@ -1,3 +1,3 @@
-[% UNLESS mobile_view %]
+[% IF gallery_button_simple %]
 &nbsp;|&nbsp;
 [% END %]
